rootfs: directories must not be opened writable.

* Also added support for O_DIRECTORY while at it.
* This fixes bug #13573.